--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,217 @@
-.App {
+.App{
+  /* border: 2px solid red; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* height: 100dvh; */
+}
+
+.container{
+  /* border: 2px solid red; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 3rem 1rem ;
+  width: 80%;
+}
+.container>.heading-box{
+  width:100%;
+  height: 4rem;
+  background-color: #36304a;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.container>.heading-box>.heading{
+  color: white;
+  font-weight: 400;
+}
+.container>.heading-box > input{
+  /* border: 2px solid red; */
+  border: none;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  background-color : white;
+  outline: transparent;
+  width: 50%;
+  height: 55%;
+  padding-left: 1.5rem;
+  font-size: large;
+}
+.container > input:focus{
+  border: 2px solid #36304a;
+}
+.container>table{
+  /* border: 2px solid; */
+  overflow: auto;
+  border-spacing: 1;
+  border-collapse: collapse;
+  border-radius: 10px;
+  background-color: white;
+  /* overflow: hidden; */
+  width: 100%;
+  margin: 0 auto;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.container>table>thead>tr{
+  background: #36304a;
+  color: white;
+}
+.container>table>thead>tr>th{
+  /* border: 1px solid; */
+  padding: 8px;
+  height: 3rem;
+  font-weight: 500;
+  font-size: 1.2rem;
+}
+.container>table>tbody>tr>td{
+  /* border: 1px solid; */
+  padding: 0 1rem;
+  height: 7rem;
+  text-align: justify;
+}
+.container>table>tbody>tr{
+  color : rgba(0, 0, 0, 0.808);
+ 
+}
+.container>table>tbody>tr:hover{
+  cursor : pointer;
+  background-color: rgba(173, 216, 230, 0.781);
+  text-decoration : underline;
+  color: blue;
+  font-weight: 600;
+}
+.container>table>tbody>tr:nth-child(even) {
+  background-color: #8f8e8e2f;
+ 
+}
+.container>table>thead>tr>th:nth-child(1), .container>table>tbody>tr>td:nth-child(1) {
+  width: 8%;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container>table>thead>tr>th:nth-child(2), .container>table>tbody>tr>td:nth-child(2) {
+  width: 8%;
+  text-align: center;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container>table>thead>tr>th:nth-child(3), .container>table>tbody>tr>td:nth-child(3) {
+  width: 30%;
+  /* text-align: center; */
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container>table>thead>tr>th:nth-child(4), .container>table>tbody>tr>td:nth-child(4) {
+  width: 54%;
+  /* text-align: center; */
+}
+.container>.page-btn-container{
+  /* border: 2px solid; */
+  width: 100%;
+  margin-top: 2rem;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 3rem;
+}
+.container>.page-btn-container>button{
+  /* border: 2px solid ; */
+  width: 4%;
+  margin: 0 .5rem;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.selected{
+  background-color: #36304a;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.container2{
+  /* border: 2px solid red; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 3rem 1rem ;
+  width: 80%;
+}
+.container2>table{
+  /* border: 2px solid; */
+  overflow: auto;
+  border-spacing: 1;
+  border-collapse: collapse;
+  border-radius: 10px;
+  background-color: white;
+  /* overflow: hidden; */
+  width: 100%;
+  margin: 0 auto;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.container2>table>thead>tr{
+  background: #36304a;
+  color: white;
+}
+.container2>table>thead>tr>th{
+  /* border: 1px solid; */
+  padding: 8px;
+  height: 3rem;
+  font-weight: 500;
+  font-size: 1.2rem;
+}
+.container2>table>tbody>tr:nth-child(even) {
+  background-color: #8f8e8e2f;
+ 
+}
+.container2>table>thead>tr>th:nth-child(1), .container2>table>tbody>tr>td:nth-child(1) {
+  width: 7%;
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container2>table>thead>tr>th:nth-child(2), .container2>table>tbody>tr>td:nth-child(2) {
+  width: 8%;
+  text-align: center;
+}
+.container2>table>tbody>tr>td{
+  /* border: 1px solid; */
+  padding: 0 1rem;
+  height: 7rem;
+  text-align: justify;
+}
+.container2>table>tbody>tr{
+  color : rgba(0, 0, 0, 0.808);
+ 
+}
+.container2>.heading-box2{
+  width:100%;
+  height: 10rem;
+  background-color: #36304a;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.container2>.heading-box2>.left{
+  /* border:2px solid red; */
+  width : 50%;
+  height: 100%;
+  display: flex;
+  justify-content: center ;
+  align-items: center;
+}
+.container2>.heading-box2>.left>h1{
+  color: white;
+  font-weight: 400;
+  font-size: 1.7rem;
+}
+.container2>.heading-box2>.right{
+  /* border:2px solid red; */
+  width : 50%;
+  height: 100%;
+  display: flex;
+  justify-content: center ;
+  align-items: center;
+  flex-direction: column;
+  color: white;
+}
+.container2>.heading-box2>.right>h2{
+  font-weight: 600;
 }
