--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App{
-  /* border: 2px solid red; */
+  /* border: 2px solid; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -125,13 +125,33 @@
 }
 
 .container2{
-  /* border: 2px solid red; */
+  /* border: 2px solid ; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: 3rem 1rem ;
   width: 80%;
+}
+.container2> button{
+  width: 6rem;
+  height: 3rem;
+  font-size: large;
+  border: none;
+  border-radius: 10px;
+  margin-bottom: 2rem;
+  background-color: #36304a;
+  color: white;
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.container2> button:hover{
+  color: black;
+  background-color: cornflowerblue;
+  transform: scale(1.1);
+}
+.container2> button:active{
+  transform: translateY(0.1px);
 }
 .container2>table{
   /* border: 2px solid; */
@@ -169,9 +189,21 @@
   width: 8%;
   text-align: center;
 }
+.container2>table>thead>tr>th:nth-child(3), .container2>table>tbody>tr>td:nth-child(3) {
+  width: 25%;
+  /* text-align: center; */
+}
+.container2>table>thead>tr>th:nth-child(4), .container2>table>tbody>tr>td:nth-child(4) {
+  width: 8%;
+  text-align: center;
+}
+.container2>table>thead>tr>th:nth-child(5), .container2>table>tbody>tr>td:nth-child(5) {
+  width: 45%;
+  /* text-align: center; */
+}
 .container2>table>tbody>tr>td{
   /* border: 1px solid; */
-  padding: 0 1rem;
+  padding: 0 .5rem;
   height: 7rem;
   text-align: justify;
 }
@@ -214,6 +246,15 @@
 }
 .container2>.heading-box2>.right>h2{
   font-weight: 600;
+  margin-bottom: .2rem;
+}
+@media screen and (max-width: 1000px){
+  .container2{
+    width: 90%;
+  }
+  .container2>table>tbody>tr>td{
+    font-size: .85rem;
+  }
 }
 @media screen and (max-width: 768px){
   .container>.page-btn-container>button{
@@ -227,10 +268,22 @@
     width: 90%;
   }
   .container>table>tbody>tr>td{
-    font-size: .85rem;
+    font-size: .8rem;
+  }
+  .container2{
+    width: 95%;
+    margin: 3rem .5rem ;
+  }
+  .container2>table>tbody>tr>td{
+    font-size: .7rem;
+  }
+  .container2>.heading-box2>.left>h1{
+    color: white;
+    font-weight: 400;
+    font-size: 1.4rem;
   }
 }
-@media screen and (max-width: 480px){
+@media screen and (max-width: 500px){
   .container{
     /* border: 2px solid red; */
     margin: 3rem .5rem ;
@@ -238,5 +291,19 @@
   }
   .container>table>tbody>tr>td{
     font-size: .65rem;
+  }
+  .container2>.heading-box2{
+    flex-direction: column;
+  }
+  .container2>.heading-box2>.left{
+    width: 100%;
+    height: 30%;
+  }
+  .container2>.heading-box2>.right{
+    width: 100%;
+    height: 70%;
+  }
+  .container2>table>tbody>tr>td{
+    font-size: .5rem;
   }
 }
